@@ -1,5 +1,10 @@
 2005-04-18  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
 
+	* gaphor/diagram/mainactions.py, po/es.po, po/nl.po:
+	Updated. More translations.
+
+2005-04-18  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
+
 	* po/es.po: Espanish translation, thanks to David Roguin.
 
 2005-04-11  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
